@@ -2,6 +2,7 @@
     <popup name="context_right">
         <menuitem name="add" action="add" />
         <menuitem name="remove" action="remove" />
+        <menuitem name="open" action="open" />
         <separator />
         <menuitem name="commit" action="commit" />
         <separator />
