@@ -1,5 +1,10 @@
 2006-09-05  Richard Ferguson <ubuntu@fergusnet.com>
 
+    * cmenu.ui: add Open to right context menu
+    * olive/frontend/gtk/menu.py: add Open file handler
+	
+2006-09-05  Richard Ferguson <ubuntu@fergusnet.com>
+
     * olive/frontend/gtk/push.py: string update
 	
 2006-09-05  Richard Ferguson <ubuntu@fergusnet.com>
